<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/linear"
        android:src="@drawable/logo" />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.CardView"
        android:id="@+id/linear"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="3dp"
        app:strokeColor="#fac6ce"
        app:strokeWidth="1dp"
        app:cardCornerRadius="5dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_gravity="center_vertical"
        android:text="@string/_91"/>

    <EditText
        android:id="@+id/pNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/open_sans_light"
        android:hint="@string/your_phone_number"
        android:inputType="phone"
        android:maxLength="10"

        android:textSize="20sp"
        android:textStyle="bold" />
</LinearLayout>
        <Button
            android:id="@+id/login"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_round"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/next"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible" />

    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</RelativeLayout>
