<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueGrey"
    android:id="@+id/main"
    tools:context="com.example.udaysaikumar.clgattendance.Activities.OTPActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_above="@id/linear"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.CardView"
        android:id="@+id/linear"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="@dimen/cardMarginMain"
        android:layout_marginEnd="@dimen/cardMarginMain"
        android:layout_alignParentBottom="true"
        app:strokeColor="@color/cardStrokeColor"
        app:strokeWidth="1dp"
        app:cardCornerRadius="5dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/opt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="@font/open_sans_light"
            android:hint="@string/enter_otp_here"
            android:inputType="number"
            android:textSize="18sp"
            android:textStyle="bold" />
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/open_sans_light"
            android:text="@string/loginn"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:textStyle="bold" />
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:visibility="invisible"
        />
</FrameLayout>
        <com.google.android.material.chip.Chip
            android:visibility="invisible"
            android:id="@+id/resentotp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resent_otp"
            android:layout_margin="10dp"
            android:textColor="@color/colorPrimary"
            />


    </LinearLayout>
    </com.google.android.material.card.MaterialCardView>



</RelativeLayout>
